project/test/syntax/good/Good50.ty
mutable class Action {

    actions: {
        action: () -> Void = {
            val newValue: Int = 3;
            Actions#doSomething(newValue)
        }
    }
}
