project/test/syntax/bad/Bad06.ty
singleton class Wrapper { 
    
    functions: {
        getOrDefault: (x: Int) -> Int = {
            if (x > 3) then x;
        }
    }
}
